CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(ModelView LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED TRUE)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(CMAKE_AUTOMOC ON)

SET(CMAKE_PREFIX_PATH $ENV{QT_DIR})

SET(SOURCES
    main.cpp
    window.cpp
)

FIND_PACKAGE(Qt5 COMPONENTS 
            Core 
            Widgets
            REQUIRED)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
            Qt5::Core
            Qt5::Widgets)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} $ENV{QT_DIR}/lib/qtmaind.lib)